# TestGUI

./: .gitignore  CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Windows.txt  build.bat  build.sh  configure.bat  configure.sh  run.bat  run.sh
BuildDirLinux/: .ninja_deps  .ninja_log  App  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
include/: Button.h  Constants.h  IButtonClickedEvent.h  Shapes.h  ToolKit.h  Types.h  Window.h
include/EventHandler/: IClickHandler.h  IHoverHandler.h
include/SDL_Related/: SDL_Structs.h  SDL_ttf_Include.h
include/Widget/: Button.h  CursorManager.h  DynamicTextWidget.h  Label.h  StaticTextWidget.h  TextableWidget.h  Widget.h
src/: Button.cpp  ToolKit.cpp  Window.cpp  main.cpp
src/Displayer/: DisplayerService.cpp  DisplayerService.h  DynamicTextWidgetDisplayer.cpp  DynamicTextWidgetDisplayer.h  IDisplayer.h  StaticTextWidgetDisplayer.cpp  StaticTextWidgetDisplayer.h  TextableWidgetDisplayer.cpp  TextableWidgetDisplayer.h  WidgetDisplayer.cpp  WidgetDisplayer.h
src/FontMapper/: FontMapper.cpp  FontMapper.h
src/SDL_Related/: SDL_Include.h  SDL_Structs.h  SDL_ttf_Include.h
src/TestHandler/: TestClickHandler.cpp  TestClickHandler.h  TestHoverHandler.cpp  TestHoverHandler.h
src/Widget/: Button.cpp  CursorManager.cpp  DynamicTextWidget.cpp  StaticTextWidget.cpp  TextableWidget.cpp  Widget.cpp  WidgetIDGenerator.cpp  WidgetIDGenerator.h
